kubernetes/keycloak/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: martakurzych/keycloak:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
          livenessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 10
